Extended Agent settings, Assert Nan values for actor training, Actor training is optional
