# app/api/openapi/main_api.yaml
@@ -32,6 +32,12 @@ paths:
       operationId: app.api.agent.learn
       tags:
         - Agent
+      parameters:
+        - in: query
+          name: train_actor
+          schema:
+            type: boolean
+            example: True
       responses:
         "200":
           description: Return the trained PID weights
@@ -310,17 +316,68 @@ components:
     AgentSettings:
       type: object
       properties:
+        use_p:
+          description: use proportional weight in PID
+          type: boolean
+          example: True
+        use_i:
+          description: Use integral weight in PID
+          type: boolean
+          example: True
+        use_d:
+          description: Use derivative weight in PID
+          type: boolean
+          example: False
+        use_iu:
+          description: Use antiwindup weight in PID
+          type: boolean
+          example: False
+        alpha:
+          description: model learning rate
+          type: number
+          format: double
+          example: 0.001
+        beta:
+          description: target learning rate
+          type: number
+          format: double
+          example: 0.002
+        gamma:
+          description: critic learning discount rate
+          type: number
+          format: double
+          example: 0.99
+        tau:
+          description: soft update weight
+          type: number
+          format: double
+          example: 0.05
+        fc1:
+          description: critic first layer kernels number
+          type: integer
+          example: 64
+        fc2:
+          description: critic second layer kernels number
+          type: integer
+          example: 64
+        batch_size:
+          description: learning batch size
+          type: integer
+          example: 256
+        n_actions:
+          description: number of actions generated by PID
+          type: integer
+          example: 1
         min_action:
+          description: PID action low limit
           type: number
           format: double
           example: -5.0
         max_action:
+          description: PID action high limit
           type: number
           format: double
           example: 5.0
-      required:
-        - min_action
-        - max_action
     AgentSettingsResponse:
       $ref: '#/components/schemas/Response'
       properties:
